added minor ui changes

--- a/src/main/resources/templates/SnippetUsersHome.html
+++ b/src/main/resources/templates/SnippetUsersHome.html
@@ -7,7 +7,7 @@
     <title>Snippet Share Home Page</title>
     <link rel="stylesheet" th:href="@{/css/bootstrap.min.css}" href="../static/css/bootstrap.min.css"/>
 </head>
-<body style = "background-image:url('http://www.freebiesgallery.com/wp-content/uploads/2013/08/light-blue-background-3.jpg');background-size:cover;background-repeat:no-repeat;">
+<body style="background-image:url('http://www.freebiesgallery.com/wp-content/uploads/2013/08/light-blue-background-2.jpg');background-size:cover;background-repeat:no-repeat;">
 <div class="navbar-wrapper">
     <nav class="navbar navbar-inverse navbar-static-top" role="navigation">
         <div class="container-fluid">
@@ -52,7 +52,7 @@
                    th:href="@{'/SnippetUsersHome/allboards/'+${userId}}"><strong>View All Boards</strong></a>
             </h2>
 
-            <hr style="border-top: black"/>
+            <hr/>
             <br/>
 
             <div class="row">
@@ -83,7 +83,7 @@
                             class="glyphicon glyphicon-zoom-in" aria-hidden="true">View</span></a><!-- View</button></form> -->
                 </div>
                 </p>
-            </div><hr/>
+            </div><hr style="border-top:1px solid darkgrey"/>
 
             <div class="row">
                 <h2><strong>&nbsp;Boards shared with you</strong></h2>
