--- a/src/main/resources/templates/ViewSnippets.html
+++ b/src/main/resources/templates/ViewSnippets.html
@@ -82,6 +82,12 @@
                             th:text="'Snippet Name   :   ' +${entry.snippetName}"/></strong> <span>
 							<form action="" id="deleteSnippetForm" method="post">
                             </form>
+
+                            <!--<form action="/sendEmail" id="sendEmail" method="post">
+                                <input type="hidden" name="snippetText" id="snippetText" th:value="${entry.snippetText}"/>
+                                <input type="hidden" name="userId" id="userId" th:value="${userId}"/>
+                                <input type="hidden" name="boardId" id="boardId" th:value="${boardId}"/>
+                            </form>-->
 						</span><br/>
                     <div class="row">
                         <p th:text="'Snippet Text  : '+${entry.snippetText}" class="col-md-9" style="margin-left:2%;"/>
@@ -89,7 +95,10 @@
                                 th:value="${boardId}+'::'+${entry.snippetId}+'::'+${userId}"
                                 onclick="deleteSnippet(this);">Delete Snippet
                         </button>
-
+                        <button type="submit" class="btn btn-link" style="color:black;"
+                                onclick="getEmailValues(this);" th:value="${entry.snippetText}">
+                            <span class="glyphicon glyphicon-share" aria-hidden="true"></span>
+                        </button>
                     </div>
 
                 </summary>
@@ -133,9 +142,6 @@
 						</span><br/>
                         <p th:text="'Snippet Text  : '+${entry.snippetText}" class="col-md-9" style="margin-left:2%;"/>
                 </summary>
-
-                <!-- <a class="btn btn-warning btn-xs" type="button" href="@{'/deleteSnippet/'+${board.boardId}+'/'+${entry.snippetId}+'/'+${user.id}}" style="margin-left:60%;">Delete Snippet</a></summary><br/> -->
-               <!-- <p th:text="'Snippet Text  : ' +${entry.snippetText}"/>-->
 
                 <strong>&nbsp;Comments </strong>
 
@@ -231,6 +237,53 @@
 </div>
 <!-- /.modal -->
 
+<!-- send email -->
+<div id="EmailModal" class="modal fade" tabindex="-1" role="dialog"
+     aria-labelledby="myModalLabel" aria-hidden="true">
+    <div class="modal-dialog">
+        <div class="modal-content">
+
+            <div class="modal-header">
+                <button type="button" class="close" data-dismiss="modal"
+                        aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+                <h4 class="modal-title" id="myModalLabel">
+                    <strong>Email Snippet</strong>
+                </h4>
+            </div>
+            <div class="modal-body">
+
+                <form id="emailForm" th:action="@{/sendEmail}" method="POST"
+                      role="form">
+                    <div class="row">
+                        <div class="col-xs-7 col-md-offset-2">
+                            <label for="emailId">Email</label> <input type="text"
+                                                                               class="form-control" id="emailId"
+                                                                               name="emailId"/>
+                        </div>
+                    </div>
+                    <input type="hidden" name="snippetText" id="snippetText"/>
+                    <input type="hidden" name="userId" id="userId" th:value="${userId}"/>
+                    <input type="hidden" name="boardId" id="boardId" th:value="${boardId}"/><br/>
+                    <div class="col-xs-7 col-md-offset-2">
+                        <button id="submit" type="submit"
+                                class="btn btn-block btn-success"
+                                style="font-weight: bold;"
+                                onclick="sendEmailSubmit()">Send Email
+                        </button>
+                    </div>
+                    <br/>
+                </form>
+                <br/>
+            </div>
+
+        </div>
+        <!-- /.modal-content -->
+    </div>
+    <!-- /.modal-dialog -->
+</div>
+
 
 <script
         src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
@@ -279,6 +332,24 @@
         console.log("action"
         + document.getElementById("deleteCommentForm").action);
     }
+
+    function submitSendEmailForm()
+    {
+        document.getElementById("sendEmail").submit();
+    }
+
+    function getEmailValues(Values)
+    {
+
+        snippetTextModal = Values.value;
+        $('#EmailModal').modal('show');
+    }
+
+    $('#EmailModal').on('show.bs.modal', function () {
+        $(this).find('input[name="snippetText"]').val(snippetTextModal);
+    });
+
+
 </script>
 
 </body>
