CSS Change Search

--- a/src/main/resources/templates/SearchUsersPage.html
+++ b/src/main/resources/templates/SearchUsersPage.html
@@ -98,7 +98,7 @@
 								<div class="col-xs-10">
 									<tr th:each="entry : ${userList}">
 										<div class="row">
-											<div class="btn btn-default btn-draggable col-xs-12"
+											<div class="col-xs-12"
 												style="margin-top: 10px; border: 1px solid; padding-bottom: 10px;">
 												<strong>NAME:</strong>
 												<td th:text="${entry.name}"></td> <br /> <strong>
