--- a/src/main/resources/templates/SearchBoardsPage.html
+++ b/src/main/resources/templates/SearchBoardsPage.html
@@ -86,50 +86,26 @@
 	<div class="container col-xs-7"
 		style="background-color: #f5f5f5; margin-left: 2%;">
 		<!-- end of navbar wrapper -->
-		<div id="page-content-wrapper">
-			<!-- Keep all page content within the page-content inset div! -->
-			<div class="page-content inset">
-				<div class="row">
-					<div class="col-md-2"></div>
-					<div class="row col-md-8" style="margin-bottom: 3%;">
-						<div class="col-xs-12">
-							<div class="row thumbnail" style="margin-top: 5%;">
-								<div class="col-xs-1"></div>
-								<div class="col-xs-10">
-									<tr th:each="entry : ${boardList}">
-										<div class="row">
-											<div class="btn btn-default btn-draggable col-xs-12"
-												style="margin-top: 10px; border: 1px solid; padding-bottom: 10px;">
-												<strong>BOARD NAME:</strong>
-												<td th:text="${entry.boardName}"></td> <br />
-												<p>
-													<span><strong>BOARD CATEGORY: </strong></span><span
-														th:text="${entry.category}"></span>
-												</p>
-												<p>
-													<span><strong>BOARD OWNER: </strong></span><span
-														th:text="${entry.boardOwner}"></span>
-												</p>
-												<p>
-													<span><strong>PRIVACY: </strong></span><span
-														th:text="${entry.privacy}"></span>
-												</p>
-
-											</div>
-										</div>
-									</tr>
-								</div>
-							</div>
-							<button id="hide">Hide</button>
-							<button id="show">Show</button>
-						</div>
-					</div>
-					<div class="col-md-2"></div>
+		<h3>
+			<strong>Your Searched Boards : </strong>
+		</h3>
+		<hr style="border-top: 1px solid darkgrey" />
+		<div class="row">
+			<tr th:each="entry : ${boardList}">
+				<div class="col-md-2"
+					style="margin-bottom: 3%; padding-bottom: 1%; margin-left: 3%; background-color: LightGray; box-shadow: 8px 8px 5px #888888; cursor: pointer;">
+					<img src="/images/code-red-640x360.png" width="20%;"
+						style="padding-top: 5%;" />&emsp;<strong><span
+						th:text="${entry.privacy}"></span></strong><br /> <br /> <strong>
+						<div th:text="${entry.boardName}"
+							style="width: 12em; white-space: nowrap; overflow: hidden; text-overflow: ellipsis;" />
+					</strong><br /> <a class="btn btn-default btn-xs" style="margin-left: 20%;"><span
+						class="glyphicon glyphicon-zoom-in" aria-hidden="true">View</span></a>
 				</div>
-			</div>
+			</tr>
 		</div>
-		<!-- end of container -->
 	</div>
+	<!-- end of container -->
 
 	<!-- end of  row -->
 
@@ -179,19 +155,8 @@
 		
 	</script>
  -->
-	<script src="http://code.jquery.com/jquery-latest.min.js"
-		type="text/javascript">
-		
-	</script>
-	<script>
-		$(document).ready(function() {
-			$("#hide").click(function() {
-				$("p").hide();
-			});
-			$("#show").click(function() {
-				$("p").show();
-			});
-		});
-	</script>
+	<script
+		src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
+	<script src="/js/bootstrap.min.js"></script>
 </body>
 </html>
