--- a/src/main/resources/templates/SearchSnippetsPage.html
+++ b/src/main/resources/templates/SearchSnippetsPage.html
@@ -86,50 +86,31 @@
 	<div class="container col-xs-7"
 		style="background-color: #f5f5f5; margin-left: 2%;">
 		<!-- end of navbar wrapper -->
-		<div id="page-content-wrapper">
-			<!-- Keep all page content within the page-content inset div! -->
-			<div class="page-content inset">
-				<div class="row">
-					<div class="col-md-2"></div>
-					<div class="row col-md-8" style="margin-bottom: 3%;">
-						<div class="col-xs-12">
-							<div class="row thumbnail" style="margin-top: 5%;">
-								<div class="col-xs-1"></div>
-								<div class="col-xs-10">
-									<tr th:each="entry : ${snippetList}">
-										<div class="row">
-											<div class="btn btn-default btn-draggable col-xs-12"
-												style="margin-top: 10px; border: 1px solid; padding-bottom: 10px;">
-												<strong>SNIPPET NAME:</strong>
-												<td th:text="${entry.snippetName}"></td>
-												<p>
-													<span><strong>SNIPPET TEXT: </strong></span><span
-														th:text="${entry.snippetText}"></span>
-												</p>
-												<div class="col-xs-3">
-													<p>
-														<strong>COMMENTS: </strong>
-													</p>
-												</div>
-												<div class="col-xs-9" style="text-align: left;">
-													<p th:each="comment : ${entry.comments}">
-													<p th:text="${comment.text}"></p>
-													</p>
-												</div>
-											</div>
-										</div>
-									</tr>
-								</div>
-							</div>
-							<button id="hide">Hide</button>
-							<button id="show">Show</button>
-						</div>
-					</div>
-					<div class="col-md-2"></div>
-				</div>
-			</div>
+		<h3>
+			<strong>Your Searched Snippets : </strong>
+		</h3>
+		<hr style="border-top: 1px solid darkgrey" />
+		<div class="row">
+			<tr th:each="entry : ${snippetList}">
+				<details style="border-style: dashed; border-color: DarkGrey">
+					&emsp;
+					<summary style="margin-left: 1%; padding-top: 1%">
+						<strong><span
+							th:text="'Snippet Name   :   ' +${entry.snippetName}" /></strong> <span>
+						</span><br />
+					</summary>
+					<p th:text="'Snippet Text  : '+${entry.snippetText}"
+						class="col-md-9" style="margin-left: 2%;" />
+					<strong>&nbsp;Comments </strong>
+					<p th:each="comment: ${entry.comments}" >
+						&emsp; <span
+							th:text="${comment.ownerName} +' : '  +${comment.text}" />
+					</p>
+					<br/>
+				</details>
+				<hr />
+			</tr>
 		</div>
-		<!-- end of container -->
 	</div>
 
 	<!-- end of  row -->
