--- a/src/main/resources/templates/SnippetUsersHome.html
+++ b/src/main/resources/templates/SnippetUsersHome.html
@@ -35,7 +35,7 @@
         <p class="text-muted" style="margin-top:2%;"><strong>To search for Snippets and Boards </strong></p>
             <h4>
                 <i class="glyphicon glyphicon-share-alt"></i> &nbsp;
-                <a th:href="@{/searchPage}"><strong>Click Here</strong></a>
+                <a th:href="@{/searchPage/__${userId}__}"><strong>Click Here</strong></a>
             </h4>
     </div>
 
