--- a/src/main/resources/templates/SearchBoardsPage.html
+++ b/src/main/resources/templates/SearchBoardsPage.html
@@ -57,7 +57,7 @@
 		</div>
 		<br />
 		<div class="col-xs-10" style="margin-top: 10%;">
-			<form class="input-group custom-search-form" action="/searchBoards"
+			<form class="input-group custom-search-form" th:action="@{/searchBoards/__${userId}__}"
 				method="GET">
 				<input type="text" class="form-control" name="board"
 					placeholder="Boards" /> <span class="input-group-btn">
@@ -99,7 +99,7 @@
 						th:text="${entry.privacy}"></span></strong><br /> <br /> <strong>
 						<div th:text="${entry.boardName}"
 							style="width: 12em; white-space: nowrap; overflow: hidden; text-overflow: ellipsis;" />
-					</strong><br /> <a class="btn btn-default btn-xs" style="margin-left: 20%;"><span
+					</strong><br /> <a th:href="@{'/getAllSnippets/'+${userId}+'/'+${entry.boardId}}" class="btn btn-default btn-xs" style="margin-left: 20%;"><span
 						class="glyphicon glyphicon-zoom-in" aria-hidden="true">View</span></a>
 				</div>
 			</tr>
