--- a/src/main/resources/templates/SearchSnippetsPage.html
+++ b/src/main/resources/templates/SearchSnippetsPage.html
@@ -89,9 +89,10 @@
 		<h3>
 			<strong>Your Searched Snippets : </strong>
 		</h3>
+		<hr style="border-top: 1px solid darkgrey" />
 		<div class="col-xs-1"></div>
 		<div class="col-xs-10">
-			<hr style="border-top: 1px solid darkgrey" />
+
 			<div class="row">
 				<tr th:each="entry : ${snippetList}">
 					<details style="border-style: dashed; border-color: DarkGrey">
@@ -102,12 +103,14 @@
 							</span><br />
 						</summary>
 						<p th:text="'Snippet Text  : '+${entry.snippetText}"
-							class="col-md-9" style="margin-left: 2%; margin-top: 2%;" />
+							class="col-md-9" style="margin-left: 2%; margin-top: 2%;" /><br/>
+
 						<strong>&nbsp;Comments </strong>
 						<p th:each="comment: ${entry.comments}">
 							&emsp; <span
 								th:text="${comment.ownerName} +' : '  +${comment.text}" />
 						</p>
+						
 						<br />
 						<br />
 					</details>
