--- a/src/main/resources/templates/SearchPage.html
+++ b/src/main/resources/templates/SearchPage.html
@@ -44,7 +44,7 @@
 			<strong>Search for</strong>
 		</h4>
 		<div class="col-xs-10" style="margin-top: 10%;">
-			<form class="input-group custom-search-form" action="/searchSnippets"
+			<form class="input-group custom-search-form" th:action="@{/searchSnippets/__${userId}__}"
 				method="GET">
 				<input type="text" class="form-control" name="snippet"
 					placeholder="Snippets" /> <span class="input-group-btn">
@@ -70,7 +70,7 @@
 		</div>
 		<br />
 		<div class="col-xs-10" style="margin-top: 10%; margin-bottom: 10%;">
-			<form class="input-group custom-search-form" action="/searchUsers"
+			<form class="input-group custom-search-form" th:action="@{/searchUsers/__${userId}__}"
 				method="GET">
 				<input type="text" class="form-control" name="user"
 					placeholder="Users" /> <span class="input-group-btn">
