--- a/src/main/resources/templates/SearchUsersPage.html
+++ b/src/main/resources/templates/SearchUsersPage.html
@@ -44,10 +44,10 @@
 			<strong>Search for</strong>
 		</h4>
 		<div class="col-xs-10" style="margin-top: 10%;">
-			<form class="input-group custom-search-form" action="/searchSnippets"
-				method="GET">
+			<form class="input-group custom-search-form" th:action="@{/searchSnippets/__${userId}__}"
+				  method="GET">
 				<input type="text" class="form-control" name="snippet"
-					placeholder="Snippets" /> <span class="input-group-btn">
+					   placeholder="Snippets" /> <span class="input-group-btn">
 					<button class="btn btn-default" type="submit">
 						<span class="glyphicon glyphicon-search"></span>
 					</button>
@@ -58,9 +58,9 @@
 		<br />
 		<div class="col-xs-10" style="margin-top: 10%;">
 			<form class="input-group custom-search-form" th:action="@{/searchBoards/__${userId}__}"
-				method="GET">
+				  method="GET">
 				<input type="text" class="form-control" name="board"
-					placeholder="Boards" /> <span class="input-group-btn">
+					   placeholder="Boards" /> <span class="input-group-btn">
 					<button class="btn btn-default" type="submit">
 						<span class="glyphicon glyphicon-search"></span>
 					</button>
@@ -70,10 +70,10 @@
 		</div>
 		<br />
 		<div class="col-xs-10" style="margin-top: 10%; margin-bottom: 10%;">
-			<form class="input-group custom-search-form" action="/searchUsers"
-				method="GET">
+			<form class="input-group custom-search-form" th:action="@{/searchUsers/__${userId}__}"
+				  method="GET">
 				<input type="text" class="form-control" name="user"
-					placeholder="Users" /> <span class="input-group-btn">
+					   placeholder="Users" /> <span class="input-group-btn">
 					<button class="btn btn-default" type="submit">
 						<span class="glyphicon glyphicon-search"></span>
 					</button>
