--- a/src/main/resources/templates/SearchUsersPage.html
+++ b/src/main/resources/templates/SearchUsersPage.html
@@ -99,7 +99,7 @@
 									<tr th:each="entry : ${userList}">
 										<div class="row">
 											<div class="col-xs-12"
-												style="margin-top: 10px; border: 1px solid; padding-bottom: 10px;">
+												style="margin-top: 10px; border: 1px solid silver; padding-bottom: 10px;">
 												<strong>NAME:</strong>
 												<td th:text="${entry.name}"></td> <br /> <strong>
 													EMAIL ID: </strong>
